--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 body {
   max-width: 100vw;
   max-height: 100vh;
-  background-color: rgb( 0, 50, 70);
+  background-color: rgb(0, 50, 70);
   padding: 5% 10% 5% 5%;
 }
 body::-webkit-scrollbar {
@@ -18,7 +18,7 @@ main {
   position: absolute;
 }
 /* LOGO */
-body > main > img { 
+body > main > img {
   margin-left: 5%;
 }
 /* TITLE */
@@ -26,12 +26,12 @@ h1 {
   margin: 3% 0% 0% 5%;
   font-size: 800%;
   line-height: 110%;
-  color: rgb( 0, 240, 190);
+  color: rgb(0, 240, 190);
 }
 /* TEXT */
 p {
   margin: 2% 0% 0% 5%;
-  color: rgba( 255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
   font-size: 150%;
   font-weight: 400;
   width: 50%;
@@ -46,8 +46,8 @@ button {
   border-radius: 5px;
   outline: none;
   border: none;
-  background-color: rgb( 0, 240, 190);
-  color: rgb( 0, 50, 70);
+  background-color: rgb(0, 240, 190);
+  color: rgb(0, 50, 70);
   transition: background-color 0.4s;
 }
 button:hover {
@@ -60,8 +60,8 @@ a {
   align-items: center;
   gap: 8px;
   text-decoration: none;
-  color: rgba( 255, 255, 255, 0.7);
-  font-size: 120%
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 120%;
 }
 /* USERS */
 .users {
@@ -97,7 +97,14 @@ a {
   top: 35%;
 }
 /* MEDIA */
+/* ///////// */
 @media (max-width: 1460px) {
+  p {
+    color: white;
+  }
+  a {
+    color: white;
+  }
   .users .user:nth-child(2) {
     display: none;
   }
@@ -114,6 +121,17 @@ a {
     margin: 5% 0% 5% 5%;
   }
 }
+@media (max-height: 755px) {
+  .user {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (max-height: 690px) {
+  h1 {
+    line-height: 100%;
+  }
+}
 @media (max-width: 680px) {
   h1 {
     font-size: 300%;
@@ -122,14 +140,40 @@ a {
     font-size: 120%;
   }
 }
+@media (max-height: 625px) {
+  .user {
+    width: 110px;
+    height: 110px;
+  }
+    h1 {
+    line-height: 90%;
+  }
+  p {
+    line-height: 90%;
+  }
+}
 @media (max-width: 550px) {
   .users .user:nth-child(1) {
+    display: none;
+  }
+  .users .user:nth-child(6) {
     display: none;
   }
 }
 @media (min-height: 1200px) {
   h1 {
     line-height: 180%;
+  }
+}
+@media (min-height: 1650px) {
+  h1 {
+    margin-top: 10%;
+  }
+  p {
+    margin-top: 8%;
+  }
+  button {
+    margin-top: 8%;
   }
 }
 @media (min-width: 2000px) {
@@ -142,19 +186,8 @@ a {
   a {
     font-size: 250%;
   }
-    .user {
+  .user {
     height: 250px;
     width: 250px;
-  }
-}
-@media (min-height: 1650px){
-  h1 {
-    margin-top: 10%;
-  }
-  p {
-    margin-top: 8%;
-  }
-  button {
-    margin-top: 8%;
   }
 }
